# yildiz_usv_re

./: CONTRIBUTING.md  README.md  requirements.txt  全局路径规划教程.md  手动建图教程.md
maps/: roboboat_manual_map.pgm  roboboat_manual_map.yaml  roboboat_manual_map_2.pgm  roboboat_manual_map_2.yaml  roboboat_manual_map_2_nav.pgm  roboboat_manual_map_2_nav.yaml
workspace_gz/: CMakeLists.txt  package.xml
workspace_gz/description/roboboat/: roboboat.xacro
workspace_gz/launch/: simulation.launch.py
workspace_gz/models/buoys/marker_buoy_black/: model.config  model.sdf
workspace_gz/models/buoys/marker_buoy_green/: model.config  model.sdf
workspace_gz/models/buoys/marker_buoy_orange/: model.config  model.sdf
workspace_gz/models/buoys/marker_buoy_red/: model.config  model.sdf
workspace_gz/models/buoys/marker_buoy_yellow/: model.config  model.sdf
workspace_gz/models/buoys/round_buoy_orange/: model.config  model.sdf
workspace_gz/models/roboboat/: model.config  model.sdf
workspace_gz/models/roboboat/meshes/: housing.dae  mount.dae  prop.dae  roboboat.dae
workspace_gz/models/roboboat/sensors/camera/meshes/: camera.dae
workspace_gz/models/roboboat/sensors/camera_post/meshes/: post.dae
workspace_gz/models/roboboat/sensors/drybox/meshes/: drybox.dae
workspace_gz/models/roboboat/sensors/gps/meshes/: gps.dae
workspace_gz/models/roboboat/sensors/lidar/meshes/: lidar.dae
workspace_gz/models/roboboat/sensors/lidar_post/meshes/: post.dae
workspace_gz/models/waves/: model.config  model.sdf
workspace_gz/models/waves/materials/programs/: GerstnerWaves_fs_330.glsl  GerstnerWaves_vs_330.glsl
workspace_gz/src/: garden_bridge.cpp
workspace_gz/worlds/: world.sdf
workspace_nav/: package.xml  setup.cfg  setup.py
workspace_nav/config/: gps_map_tf.yaml  map.yaml  nav2_params.yaml  path_follower.yaml
workspace_nav/launch/: global_planner.launch.py  nav2.launch.py  nav_rviz.launch.py  path_follower.launch.py
workspace_nav/rviz/: static_navigation.rviz
workspace_nav/scripts/: global_path_client.py  gps_map_tf.py  path_follower.py  rviz_goal_planner.py  set_initial_pose.py  waypoint_transform.py  waypoint_with_state.py
workspace_ros/: package.xml  setup.cfg  setup.py
workspace_ros/config/: ekf.yaml  navsat.yaml  static_transform.yaml
workspace_ros/launch/: localization.launch.py
workspace_ros/scripts/: converter.py  gps_covariance_repub.py  imu_covariance_repub.py  kamikaze.py  manual_control.py  static_transform_publisher.py  target_buoy.py
workspace_slam/: CMakeLists.txt  package.xml
workspace_slam/config/: mapper_params_online_async.yaml
workspace_slam/launch/: slam.launch.py
workspace_slam/rviz/: slam_mapping.rviz
