<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
             schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>workspace_gz</name>
  <version>0.0.1</version>
  <description>Simulation package for Gazebo Sim (version 7.9.0) customized for the TEKNOFEST Unmanned Surface Vehicle (USV) Competition.</description>

  <maintainer email="yildiz.usv@outlook.com">YILDIZ USV</maintainer>
  <license>Apache-2.0</license>

  <author>Görkem Direybatoğulları</author>
  <author>Mustafa Berat Yavaş</author>
  <author>Muhammet Al</author>
  <author>Kerem Demirbent</author>
  <author>Harun Kurt</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>ros_gz_sim</depend>
  <depend>ros_gz_bridge</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>xacro</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>resource_retriever</depend>
  
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_flake8</test_depend>
  <test_depend>ament_cmake_pycodestyle</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
