<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>workspace_nav</name>
  <version>0.0.1</version>
  <description>Nav2-based autonomous route planning package customized for the TEKNOFEST Unmanned Surface Vehicle (USV) Competition.</description>
  
  <maintainer email="yildiz.usv@outlook.com">YILDIZ USV</maintainer>
  <license>Apache-2.0</license>
  
  <author>Görkem Direybatoğulları</author>
  <author>Mustafa Berat Yavaş</author>
  <author>Muhammet Al</author>
  <author>Kerem Demirbent</author>
  <author>Harun Kurt</author>

  <buildtool_depend>ament_python</buildtool_depend>
  
  <depend>rclpy</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>ros_gz_bridge</depend>
  <depend>ros_gz_interfaces</depend>
  <depend>rosgraph_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>nav2_bringup</depend>
  
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>